# Parser

./: .clang-format  .cmake-format.yaml  .gitignore  CMakeLists.txt  README.md  todo.md
.github-disabled/workflows/: windows-debug-deploy.yml  windows.yml
.github/workflows/: macos.yml  ubuntu.yml  windows-debug-deploy.yml  windows.yml
cmake/: AddClang.cmake  Catch2Helpers.cmake  CodeCoverage.cmake  ConanHelpers.cmake  Doxygen.cmake  GetFrontend.cmake  GetIR.cmake  IncludePathHelpers.cmake  LLVMUtilities.cmake  ProjectSettings.cmake  SetupTest.cmake  StaticAnalyzers.cmake  WarningsAndOptions.cmake
cmake/packaging/: IRConfig.cmake  IncludePathHelpers.cmake  LLVMUtilities.cmake  ParserConfig.cmake  ParserConfig.cmake.in
docs/: Parser.graphml  README.md
docs/ReleaseNotes/: v0.2.0.md  v0.2.1.md  v0.3.0.md  v0.4.0.md  v0.4.1.md  v0.5.0.md  v0.5.1.md  v0.5.3.md  v0.5.4.md  v0.5.5.md  v0.5.6.md  v0.6.0.md
docs/internal/: addingContainer.md  architecture.md  config.md  logging.md
include/Frontend/: ParserFrontendAction.h
include/Parser/: Config.hpp  MetaData.hpp  Parse.h  Parse.hpp
include/Parser/Windows/: systemIncludeHelper.hpp
include/Visitor/: ParserVisitor.h
src/: Parser.cpp  main.cpp
src/Builders/: commonBuilder.cpp  commonBuilder.h  commonBuilder.hpp  dependencybuilder.cpp  dependencybuilder.hpp  enumBuilder.cpp  enumBuilder.hpp  fieldBuilder.cpp  fieldBuilder.hpp  functionBuilder.cpp  functionBuilder.h  functionBuilder.hpp  namespaceBuilder.cpp  namespaceBuilder.hpp  structBuilder.cpp  structBuilder.h  structBuilder.hpp  typeBuilder.cpp  typeBuilder.h  typeBuilder.hpp
src/Consumer/: ParserConsumer.cpp  ParserConsumer.h  ParserConsumer.hpp
src/Factory/: ParserFrontendActionFactory.cpp  ParserFrontendActionFactory.h  ParserFrontendActionFactory.hpp
src/Frontend/: ParserFrontendAction.cpp  ParserFrontendAction.h  ParserFrontendAction.hpp
src/Helpers/: IRData.h  commandLineArgs.cpp.in  commandLineArgs.hpp  getStructData.cpp  getStructData.hpp  includes.cpp.in  includes.hpp  logging.cpp  logging.hpp  namespaceBuilder.cpp  namespaceBuilder.h  namespaceHelpers.cpp  namespaceHelpers.h  walkIRStructure.cpp  walkIRStructure.h  walkIRStructure.hpp  windowsPathExtraction.cpp  windowsPathExtraction.hpp
src/Helpers/Builders/: commonBuilder.cpp  commonBuilder.h  functionBuilder.cpp  functionBuilder.h  namespaceBuilder.cpp  namespaceBuilder.h  structBuilder.cpp  structBuilder.h
src/Helpers/Type/: matchers.cpp  matchers.hpp  utilities.cpp  utilities.h  utilities.hpp
src/Helpers/Type/Matchers/: base.cpp  base.hpp  container.cpp  container.hpp  function.cpp  function.hpp
src/Helpers/Utils/: combine.cpp  combine.hpp  split.cpp  split.h  string.cpp  string.hpp
src/IRProxy/: IRData.h  IRData.hpp
src/Parser/: Parse.cpp
src/Parser/Windows/: systemIncludeHelper.cpp
src/Template/: cache.cpp  cache.hpp
src/Visitor/: ParserVisitor.cpp  ParserVisitor.h  ParserVisitor.hpp  VisitCXXRecordDecl.cpp  VisitClassTemplateSpecializationDecl.cpp  VisitEnumDecl.cpp  VisitFieldDecl.cpp  VisitFunctionDecl.cpp  VisitFunctionTemplateDecl.cpp  VisitNamespaceDecl.cpp  VisitVarDecl.cpp
src/Visitor/Helpers/: addId.cpp  addId.hpp  getDocumentation.cpp  getDocumentation.hpp  parseFunction.cpp  parseFunction.hpp
tests/: CMakeLists.txt  arrays.cpp  autos.cpp  classComments.cpp  classes.cpp  complex.cpp  constructorsDestructors.cpp  containers.cpp  dataStructs.cpp  dependency.cpp  deques.cpp  docsClass.cpp  docsEnums.cpp  docsFunctions.cpp  docsNamespaces.cpp  docsVariables.cpp  enums.cpp  fields.cpp  files.cpp  forward_lists.cpp  functionTypes.cpp  functions.cpp  globalVariables.cpp  inheritence.cpp  lists.cpp  maps.cpp  multimaps.cpp  multipleClasses.cpp  multisets.cpp  namespaces.cpp  operators.cpp  optional.cpp  pairs.cpp  paths.cpp  polymorphic.cpp  priority_queues.cpp  queues.cpp  references.cpp  representation.cpp  sets.cpp  (+14 more)
tests/Helpers/: commandLineArgs.cpp  includes.cpp  windowsPathExtraction.cpp
tests/Helpers/Type/: matchers.cpp
tests/Helpers/Type/Matchers/: container.cpp
tests/Helpers/Utils/: split.cpp  string.cpp
tests/Parser/: Parse.cpp
tests/Parser/Windows/: systemIncludeHelper.cpp
tests/TestUtil/include/TestUtil/: compare.h  compare.hpp  contains.hpp  files.h  files.hpp  finders.hpp  getName.hpp  parse.h  parse.hpp  types.h  types.hpp
tests/packaging/: CMakeLists.txt  README.md
tests/packaging/consumer/: CMakeLists.txt
tests/packaging/consumer/src/: consumer.cpp
tools/conan_profiles/Darwin/: clang.in
tools/packaging/: CMakeLists.txt
